# Poll-App

./: .gitignore  README.md  compose-dev.yml  compose-prod.yml  env.example
polls_library/: .dockerignore  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
polls_library/backend/: config.py  crud.py  database.py  exceptions.py  init_db.py  main.py
polls_library/backend/alembic/: env.py
polls_library/backend/alembic/versions/: 02680878b1e0_option_votes_fixed.py  2e432cdd37ba_initial.py
polls_library/backend/api/: deps.py  main.py
polls_library/backend/api/routes/: debug.py  google.py  polls.py  users.py  votes.py
polls_library/backend/frontend/: test.py
polls_library/backend/frontend/templates/: base.jinja2  create_poll.jinja2  index.jinja2  polls.jinja2  vote_success.jinja2
polls_library/backend/models/: models.py
polls_library/backend/schemas/: schemas.py
