[project]
name = "polls-library"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "authlib>=1.5.2",
    "email-validator>=2.2.0",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "psycopg[binary]>=3.2.7",
    "pydantic-settings>=2.9.1",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "sqlalchemy[asyncio]>=2.0.41",
    "uvicorn>=0.34.2",
]

[project.optional-dependencies]

[dependency-groups]
dev = [
    "litecli>=1.15.0",
]
performance = [
    "httptools>=0.6.4",
    "uvloop>=0.21.0",
]
prod = [
    "alembic>=1.16.1",
]

#https://docs.astral.sh/uv/reference/settings
[tool.uv]
default-groups = ["dev","performance"]
compile-bytecode = true

#https://stackoverflow.com/questions/72294299/multiple-top-level-packages-discovered-in-a-flat-layout
[tool.setuptools]
py-modules = []
